Kubernetes/Frontend/Angular/02_angular_deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: angular-deployment
  labels:
    app: web-portfolio
    tier: front-end
spec:
  replicas: 1  
  selector: 
    matchLabels:
      app: web-portfolio
      tier: front-end
  template: 
    metadata:
      name: nginx-pod
      labels:
        app: web-portfolio
        tier: front-end
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - name: http
              containerPort: 80
  nodeSelector:
    webserver_node: "true"
