Kubernetes/Frontend/Angular/01_angular_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: angular-service
  labels:
    app: traffic-app
    tier: front-end
spec:
  type: nodePort
  selector:
    app: traffic-app
    tier: front-end
  ports:
    - name: http
      protocol: TCP
      nodePort: 35269
      port: 443
      targetPort: 80
