Kubernetes/Frontend/Angular/03_angular_ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: angular-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: sjplautz.com
      http:
        paths:
          - backend:
              serviceName: angular-service
              servicePort: http
